# app/gateway/api/internal/handler/bot/bot_mark_read_handler.go
@@ -1,0 +1,31 @@
+// Code scaffolded by goctl. Safe to edit.
+// goctl 1.10.1
+
+package bot
+
+import (
+	"net/http"
+
+	"github.com/hellopoisonx/aim/app/gateway/api/internal/logic/bot"
+	"github.com/hellopoisonx/aim/app/gateway/api/internal/svc"
+	"github.com/hellopoisonx/aim/app/gateway/api/internal/types"
+	"github.com/zeromicro/go-zero/rest/httpx"
+)
+
+func BotMarkReadHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.BotMarkReadRequest
+		if err := httpx.Parse(r, &req); err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+			return
+		}
+
+		l := bot.NewBotMarkReadLogic(r.Context(), svcCtx)
+		resp, err := l.BotMarkRead(&req)
+		if err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+		} else {
+			httpx.OkJsonCtx(r.Context(), w, resp)
+		}
+	}
+}
